# datafusion-greatest

./: Cargo.toml  DEBUG.md
src/: greatest.rs  helpers.rs  lib.rs
src/helpers/: coerce_type_helper.rs  compare_greater.rs  create_vec_with_literals.rs  mod.rs  permutation.rs  transpose.rs
src/tests/: coerce.rs  invalid_expr.rs  mod.rs  multiple_column_different_types.rs  multiple_column_same_type.rs  scalars.rs  scalars_and_arrays.rs  single_column.rs  single_type.rs  validation.rs
src/tests/utils/: debug.rs  find_greatest.rs  generators.rs  get_results.rs  mod.rs  setup.rs  transpose.rs
src/traits/: mod.rs  null_buffer_ext.rs
